# shusha-gui

./: README.md  pyproject.toml
src/gui/: gui.py
src/gui/sandbox/: tablebs.py
src/shusha_gui/: gui.py
