[project]
name = "shusha-gui"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kemboiray", email = "113639995+Kemboiray@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
