[project]
name = "shusha-gui"
version = "0.1.0"
description = "Creating a gui for the Shusha DM project"
authors = [
    {name = "Kemboiray", email = "113639995+Kemboiray@users.noreply.github.com"},
]
dependencies = [
    "ttkwidgets>=0.13.0",
    "ttkbootstrap>=1.10.1",
    "Pillow>=10.2.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
